before adding of teacher and lecture tables
