# routes/index.js
@@ -1,10 +1,10 @@
+
+
 const express = require('express');
 const router = express.Router();
 
 const studentRouter = require('./student-router');
 
-
-/* GET home page. */
-router.get('/students', studentRouter);
+router.use('/students', studentRouter);
 
 module.exports = router;
